--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   },
   "dependencies": {
     "astro": "^2.9.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0",
+    "prettier-plugin-astro": "^0.11.0"
   }
 }
