--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.9.2"
+    "@astrojs/preact": "^2.2.1",
+    "@astrojs/rss": "^2.4.3",
+    "astro": "^2.9.2",
+    "preact": "^10.16.0"
   },
   "devDependencies": {
     "prettier": "^3.0.0",
