--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/image": "^0.17.2",
     "@astrojs/preact": "^2.2.1",
     "@astrojs/rss": "^2.4.3",
+    "@fontsource/inter": "^5.0.5",
+    "@fontsource/karla": "^5.0.5",
     "astro": "^2.9.2",
     "preact": "^10.16.0",
     "sharp": "^0.32.4"
